--- a/views/home.pug
+++ b/views/home.pug
@@ -11,7 +11,7 @@ html
         .header
             .container
                 h1 
-                    a(href='/') 🌊Musicccccc Wave
+                    a(href='/') 🌊Music Wave
                     .d-flex.align-items-center
                         a(href='https://www.instagram.com/sush1_boy/' target='_blank').text-muted.mx-2 Desigined by Sushijin
                         .theme-switch
